// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`matches snapshot while events loading 1`] = `
<div>
  <section
    class="relative min-h-screen flex items-center justify-center overflow-hidden pt-24 pb-8 hero-gradient-gold"
  >
    <div
      class="section-container relative z-10 w-full"
    >
      <div
        class="text-center mb-12 md:mb-16 hidden md:block"
      >
        <div
          class="relative inline-block mx-auto mb-6"
        >
          <div
            class="absolute inset-0 bg-gradient-radial from-yellow-200/40 via-yellow-100/20 to-transparent blur-3xl scale-110"
          />
          <img
            alt="Connect"
            class="relative w-auto h-48 mx-auto"
            src="/images/ConnectLogoBIG-Black.svg"
          />
        </div>
        <h1
          class="font-slogan text-3xl md:text-4xl lg:text-5xl text-brand-text tracking-wider uppercase mb-4"
        >
          Home of Beats on the Beltline
        </h1>
      </div>
      <div
        class="flex justify-center items-center py-12"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle animate-spin text-brand-primary"
          fill="none"
          height="40"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
    </div>
  </section>
</div>
`;

exports[`matches snapshot with hero cards and no events 1`] = `
<div>
  <section
    class="relative min-h-screen flex items-center justify-center overflow-hidden pt-24 pb-8 hero-gradient-gold"
  >
    <div
      class="section-container relative z-10 w-full"
    >
      <div
        class="text-center mb-12 md:mb-16 hidden md:block"
      >
        <div
          class="relative inline-block mx-auto mb-6"
        >
          <div
            class="absolute inset-0 bg-gradient-radial from-yellow-200/40 via-yellow-100/20 to-transparent blur-3xl scale-110"
          />
          <img
            alt="Connect"
            class="relative w-auto h-48 mx-auto"
            src="/images/ConnectLogoBIG-Black.svg"
          />
        </div>
        <h1
          class="font-slogan text-3xl md:text-4xl lg:text-5xl text-brand-text tracking-wider uppercase mb-4"
        >
          Home of Beats on the Beltline
        </h1>
      </div>
      <div
        class="flex flex-col md:flex-row md:justify-center gap-4 max-w-7xl mx-auto "
      >
        <a
          class="block h-full md:flex-1 md:min-w-0"
          href="/events"
          style="animation: fadeInUp 0.6s ease-out 0s both;"
        >
          <div
            data-testid="hero-card"
          >
            Internal Card
          </div>
        </a>
        <a
          class="block h-full md:flex-1 md:min-w-0"
          href="https://example.com"
          rel="noopener noreferrer"
          style="animation: fadeInUp 0.6s ease-out 0.15s both;"
          target="_blank"
        >
          <div
            data-testid="hero-card"
          >
            External Card
          </div>
        </a>
      </div>
    </div>
  </section>
</div>
`;

exports[`matches snapshot with no cards and no events 1`] = `
<div>
  <section
    class="relative min-h-screen flex items-center justify-center overflow-hidden pt-24 pb-8 hero-gradient-gold"
  >
    <div
      class="section-container relative z-10 w-full"
    >
      <div
        class="text-center mb-12 md:mb-16 hidden md:block"
      >
        <div
          class="relative inline-block mx-auto mb-6"
        >
          <div
            class="absolute inset-0 bg-gradient-radial from-yellow-200/40 via-yellow-100/20 to-transparent blur-3xl scale-110"
          />
          <img
            alt="Connect"
            class="relative w-auto h-48 mx-auto"
            src="/images/ConnectLogoBIG-Black.svg"
          />
        </div>
        <h1
          class="font-slogan text-3xl md:text-4xl lg:text-5xl text-brand-text tracking-wider uppercase mb-4"
        >
          Home of Beats on the Beltline
        </h1>
      </div>
      <div
        class="max-w-3xl mx-auto text-center py-8"
      >
        <div
          class="mb-6 text-brand-primary/40 flex justify-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-calendar"
            fill="none"
            height="72"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            width="72"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
        </div>
        <p
          class="text-xl text-brand-header/60 mb-6"
        >
          New events coming soon!
        </p>
        <button
          class="bg-brand-header text-white hover:bg-brand-primary hover:text-brand-header font-bold px-10 py-3 rounded-lg text-lg uppercase transition-all shadow-xl hover:shadow-2xl transform hover:scale-105"
        >
          Join Our Mailing List
        </button>
      </div>
    </div>
  </section>
</div>
`;

exports[`matches snapshot with upcoming event 1`] = `
<div>
  <section
    class="relative min-h-screen flex items-center justify-center overflow-hidden pt-24 pb-8 hero-gradient-gold"
  >
    <div
      class="section-container relative z-10 w-full"
    >
      <div
        class="text-center mb-12 md:mb-16 hidden md:block"
      >
        <div
          class="relative inline-block mx-auto mb-6"
        >
          <div
            class="absolute inset-0 bg-gradient-radial from-yellow-200/40 via-yellow-100/20 to-transparent blur-3xl scale-110"
          />
          <img
            alt="Connect"
            class="relative w-auto h-48 mx-auto"
            src="/images/ConnectLogoBIG-Black.svg"
          />
        </div>
        <h1
          class="font-slogan text-3xl md:text-4xl lg:text-5xl text-brand-text tracking-wider uppercase mb-4"
        >
          Home of Beats on the Beltline
        </h1>
      </div>
      <div
        class="max-w-5xl mx-auto"
      >
        <div
          data-testid="event-tab-bar"
        />
        <div
          data-testid="upcoming-event-card"
        >
          April Event
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`matches snapshot with upcoming event and hero cards 1`] = `
<div>
  <section
    class="relative min-h-screen flex items-center justify-center overflow-hidden pt-24 pb-8 hero-gradient-gold"
  >
    <div
      class="section-container relative z-10 w-full"
    >
      <div
        class="text-center mb-12 md:mb-16 hidden md:block"
      >
        <div
          class="relative inline-block mx-auto mb-6"
        >
          <div
            class="absolute inset-0 bg-gradient-radial from-yellow-200/40 via-yellow-100/20 to-transparent blur-3xl scale-110"
          />
          <img
            alt="Connect"
            class="relative w-auto h-48 mx-auto"
            src="/images/ConnectLogoBIG-Black.svg"
          />
        </div>
        <h1
          class="font-slogan text-3xl md:text-4xl lg:text-5xl text-brand-text tracking-wider uppercase mb-4"
        >
          Home of Beats on the Beltline
        </h1>
      </div>
      <div
        class="max-w-5xl mx-auto"
      >
        <div
          data-testid="event-tab-bar"
        />
        <div
          data-testid="upcoming-event-card"
        >
          April Event
        </div>
        <div
          class="flex flex-col md:flex-row md:justify-center gap-4 max-w-7xl mx-auto mt-10"
        >
          <a
            class="block h-full md:flex-1 md:min-w-0"
            href="/events"
            style="animation: fadeInUp 0.6s ease-out 0s both;"
          >
            <div
              data-testid="hero-card"
            >
              Internal Card
            </div>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;
